--- a/README
+++ b/README
@@ -1,1 +1,92 @@
-TODO
+CONTENTS
+--------
+ * Copyright
+ * Introduction
+ * Plugin Structure
+ * Requirements
+ * Installation
+ * Configuration
+ * Maintainers
+
+
+COPYRIGHT
+---------
+Copyright (c) 2015 University of Kansas Medical Center
+
+
+INTRODUCTION
+------------
+This custom REDCap plugin was developed to meet the inter-project reporting
+needs of the RE-POWER study, but was designed in a generalizable way, so that it
+could easily be used in other cases as well.
+
+The plugin allows for reports to be generated using SQL by defining report in a
+SQL Report Configuration REDCap project (defined in data_dictionary.csv).
+Details on configuring reports are contained in REDCap project.
+
+
+PLUGIN STRUCTURE
+----------------
+This plugin used the KUMC REDCap Plugin Framework, which is a lightweight MVC 
+framework specific to creating REDCap Plugins.
+
+ * config.ini: Contains plugin configuration.
+
+ * config.ini.sample: Contains plugin configuration file structure with
+   needed parameters.
+
+ * controllers/: This directory holds controller object files which handle
+   plugin specific HTTP requests.  Controller objects should interit from the
+   PluginController object found in <framework-root>/PluginController.php.
+
+ * index.php: This file contains the "glue" that connects the rest of the
+   plugin code with REDCap code.
+
+ * routes.php: The file routes HTTP requests to the appropriate controller.
+
+ * README: This file.
+
+ * templates/: Holds Twig template files, which contain a combination of HTML
+   and template display logic.
+
+
+REQUIREMENTS
+------------
+This plugin requires the following to work correctly:
+
+ * The redcap_connect.php file from the REDCap base install is required and
+   needs to be present in the root redcap directory (included in as a part of
+   the full REDCap install as of version 5.5.0).  Can also be found at:
+   https://iwg.devguard.com/trac/redcap/browser/misc/redcap_connect.zip?format=rawthe
+
+ * MI REDCap Plugin Framework : Contains plugin helper objects and functions
+   (including RestCallRequest.php which was obtained via the REDCap API PHP
+   sample code).
+
+
+INSTALLATION
+------------
+Installation of this plugin consists of the following steps:
+
+ 1. Make sure that the redcap_connect.php file described above is present in
+    the local REDCap installation's root directory.
+
+ 2. Clone the KUMC repower-redcap-plugin into the <redcap-root>/plugins
+    directory.  Create the plugins directory if necessary.
+
+
+CONFIGURATION
+-------------
+To configure the plugin:
+
+ 1. Copy <plugin-root>/config.ini.sample to <plugin-root>/config.ini.
+
+ 2. Set the configuration parameters to those relevant to the local
+    installation.  If unsure of parameter values, check the development
+    environment configuration on development environment.
+
+
+MAINTAINERS
+-----------
+Current maintainers:
+ * Michael Prittie (mprittie@kumc.edu)
